--- a/public/index.html
+++ b/public/index.html
@@ -56,10 +56,7 @@
               <button class="navbar-toggler border-0 pe-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent" data-navbar-collapse="data-navbar-collapse">
                 <div class="container d-lg-flex justify-content-lg-end pe-lg-0 w-lg-100">
-                  <form class="form-inline position-relative w-lg-50 ms-lg-4 ms-xl-9 mt-3 mt-lg-0" onsubmit="return false;">
-                    <input class="search fs-8 bg-transparent form-control" type="search" name="search" placeholder="search plants..." />
-                    <div class="search-icon"> <span class="uil uil-search"></span></div>
-                  </form>
+                  
                   <ul class="navbar-nav mt-2 mt-lg-1 ms-lg-4 ms-xl-8 ms-2xl-9 gap-lg-x1" data-navbar-nav="data-navbar-nav">
                     <li class="nav-item"> <a class="nav-link nav-bar-item px-0" href="#home" title="home">home</a></li>
                     <li class="nav-item"> <a class="nav-link nav-bar-item px-0" href="#about" title="about">about</a></li>
@@ -77,11 +74,10 @@
                 <div class="row g-4 g-lg-6 g-xl-7 mb-6 mb-lg-7 mb-xl-10 align-items-center">
                   <div class="col-12 col-lg-6"><img class="img-fluid w-50 w-lg-100" src="assets/img/Hero/man_watering.png" alt="" /></div>
                   <div class="col-12 col-lg-6">
-                    <h1 class="fs-5 fs-md-3 fs-xxl-2 text-black fw-light mb-4">Be a <span class="fw-bold">Plant Parent </span>today <br class="d-sm-none d-md-block d-xxl-none" />with <span class="text-gradient fw-bold">Aranyak</span></h1>
+                    <h1 class="fs-5 fs-md-3 fs-xxl-2 text-black fw-light mb-4">Conectando <span class="fw-bold">pessoas, tecnologia e sustentabilidade- </span> <br class="d-sm-none d-md-block d-xxl-none" /> <span class="text-gradient fw-bold">Econnect</span></h1>
                     <p class="fs-8 fs-md-11 fs-xxl-7 text-primary mb-5 mb-lg-6 mb-xl-7 fw-light">
-                      First timer or experienced, we have something for you.
-                      Take a look at our vast collection of greenery & let us help you transform your household and front/back
-                      yard.
+                      Do planejamento do produto à implementação, cada detalhe da connect foi projetado com uma coisa em mente:
+                       simplificar e incentivar práticas sustentáveis. Veja como estamos fazendo isso.
                     </p>
                     <button class="btn btn-gradient fs-8 mt-1 d-inline-flex"><span>explore catalog</span><span class="uil uil-arrow-right"></span></button>
                   </div>
@@ -319,61 +315,7 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-6 mb-lg-7 mb-xl-10" id="slider-3">
-                <h1 class="fs-5 fs-md-3 fs-xxl-2 text-secondary text-capitalize fw-light mb-13 mb-lg-7"> <span class="fw-bold">Easy </span>to <br class="d-sm-none" />care plants</h1>
-                <div class="mb-4 mb-lg-0">
-                  <div class="swiper-theme-container position-relative">
-                    <div class="swiper-container theme-slider" data-swiper='{"spaceBetween":32,"loop":true,"loopedSlides":5,"breakpoints":{"0":{"slidesPerView":1},"768":{"slidesPerView":2},"1024":{"slidesPerView":3}}}'>
-                      <div class="swiper-wrapper">
-                        <div class="product-card swiper-slide">
-                          <div class="product-card-top" style="background-image: url('assets/img/products/products/7.png')">
-                            <div class="add-section"><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center" href="#!"><span class="uil uil-file-heart me-1 align-middle"></span>add to wishlist </a><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center text-success fw-bold" href="#!"><span class="uil uil-shopping-cart me-1 align-middle"></span>add to cart</a></div>
-                          </div>
-                          <div class="d-flex flex-column gap-x1 p-x1 pb-5 product-card-body">
-                            <h3 class="text-success fw-semi-bold text-center line-clamp-1 fs-8 fs-md-11 fs-xxl-7">Peace Lily</h3>
-                            <p class="text-dark fs-10 fs-md-9 fs-xl-8 text-capitalize lh-xl mb-0 line-clamp-3">If you're prone to overwatering, try Spathiphyllum. With enough light, they'll also produce their spade-shaped flowers throughout the year.</p>
-                          </div>
-                        </div>
-                        <div class="product-card swiper-slide">
-                          <div class="product-card-top" style="background-image: url('assets/img/products/products/8.png')">
-                            <div class="add-section"><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center" href="#!"><span class="uil uil-file-heart me-1 align-middle"></span>add to wishlist </a><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center text-success fw-bold" href="#!"><span class="uil uil-shopping-cart me-1 align-middle"></span>add to cart</a></div>
-                          </div>
-                          <div class="d-flex flex-column gap-x1 p-x1 pb-5 product-card-body">
-                            <h3 class="text-success fw-semi-bold text-center line-clamp-1 fs-8 fs-md-11 fs-xxl-7">Spider Plant</h3>
-                            <p class="text-dark fs-10 fs-md-9 fs-xl-8 text-capitalize lh-xl mb-0 line-clamp-3">The fast-growing shoots produce little &quot;babies&quot; that you can re-pot for added greenery elsewhere. Just stick to well-lit spots, water weekly. </p>
-                          </div>
-                        </div>
-                        <div class="product-card swiper-slide">
-                          <div class="product-card-top" style="background-image: url('assets/img/products/products/9.png')">
-                            <div class="add-section"><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center" href="#!"><span class="uil uil-file-heart me-1 align-middle"></span>add to wishlist </a><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center text-success fw-bold" href="#!"><span class="uil uil-shopping-cart me-1 align-middle"></span>add to cart</a></div>
-                          </div>
-                          <div class="d-flex flex-column gap-x1 p-x1 pb-5 product-card-body">
-                            <h3 class="text-success fw-semi-bold text-center line-clamp-1 fs-8 fs-md-11 fs-xxl-7">Kalanchoe</h3>
-                            <p class="text-dark fs-10 fs-md-9 fs-xl-8 text-capitalize lh-xl mb-0 line-clamp-3">This water-retaining succulent grows colorful, bell-shaped flowers and withstands dry climates and terrible temperature swings.,</p>
-                          </div>
-                        </div>
-                        <div class="product-card swiper-slide">
-                          <div class="product-card-top" style="background-image: url('assets/img/products/products/1.png')">
-                            <div class="add-section"><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center" href="#!"><span class="uil uil-file-heart me-1 align-middle"></span>add to wishlist </a><a class="fs-10 fs-md-9 d-flex flex-column flex-xl-row align-items-center text-success fw-bold" href="#!"><span class="uil uil-shopping-cart me-1 align-middle"></span>add to cart</a></div>
-                          </div>
-                          <div class="d-flex flex-column gap-x1 p-x1 pb-5 product-card-body">
-                            <h3 class="text-success fw-semi-bold text-center line-clamp-1 fs-8 fs-md-11 fs-xxl-7">Monstera Obliqua Peruvian</h3>
-                            <p class="text-dark fs-10 fs-md-9 fs-xl-8 text-capitalize lh-xl mb-0 line-clamp-3">aS it is a small species, Monstera Obliqua is uncommon. Another reason for its scarcity is that it grows slowly and has short selling seasons</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="slider-nav">
-                      <button class="btn prev-button" data-slider="slider-3"><span class="uil uil-angle-left-b"></span></button>
-                      <button class="btn next-button" data-slider="slider-3"><span class="uil uil-angle-right-b"></span></button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="d-flex justify-content-center">
-                <button class="btn btn-gradient fs-8 d-inline-flex"><span>see full catalog</span><span class="uil uil-arrow-right"></span></button>
-              </div>
-            </section>
+              
             <section class="mb-9 mb-lg-10 mb-xxl-11" id="review">
               <h3 class="mb-3 pt-6 fs-8 fs-md-7 fs-xxl-6 text-success fw-bold text-center text-lg-start text-capitalize">review </h3>
               <h1 class="fs-5 fs-md-3 fs-xxl-2 text-secondary text-capitalize fw-light mb-6 mb-lg-8 text-center text-lg-start">
